--- a/Expressions/Expressions.csproj
+++ b/Expressions/Expressions.csproj
@@ -45,12 +45,41 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Ast\BinaryExpression.cs" />
+    <Compile Include="Ast\Cast.cs" />
+    <Compile Include="Ast\AstNodeCollection.cs" />
+    <Compile Include="Ast\ExpressionType.cs" />
+    <Compile Include="Ast\Constant.cs" />
+    <Compile Include="Ast\IAstNode.cs" />
+    <Compile Include="Ast\Identifier.cs" />
+    <Compile Include="Ast\IdentifierCollection.cs" />
+    <Compile Include="Ast\Index.cs" />
+    <Compile Include="Ast\MemberAccess.cs" />
+    <Compile Include="Ast\MethodCall.cs" />
+    <Compile Include="Ast\TypeIdentifier.cs" />
+    <Compile Include="Ast\UnaryExpression.cs" />
+    <Compile Include="BoundExpression.cs" />
+    <Compile Include="BoundExpressionCache.cs" />
+    <Compile Include="CompilationException.cs" />
+    <Compile Include="DynamicExpression.cs" />
+    <Compile Include="DynamicExpressionCache.cs" />
+    <Compile Include="ExpressionLanguage.cs" />
     <Compile Include="Flee\FleeLexer.cs" />
     <Compile Include="Flee\FleeParser.cs" />
     <Compile Include="Flee\Generated\FleeLexer.cs" />
     <Compile Include="Flee\Generated\FleeParser.cs" />
+    <Compile Include="IIdentifierResolver.cs" />
+    <Compile Include="IExpressionBinder.cs" />
+    <Compile Include="Import.cs" />
+    <Compile Include="ImportMethodResolver.cs" />
+    <Compile Include="ImportPropertyResolver.cs" />
     <Compile Include="IParser.cs" />
+    <Compile Include="ObjectUtil.cs" />
+    <Compile Include="OwnerMethodResolver.cs" />
+    <Compile Include="OwnerPropertyResolver.cs" />
+    <Compile Include="ParseResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VariableResolver.cs" />
   </ItemGroup>
   <ItemGroup>
     <Antlr3 Include="Flee\Flee.g">
