--- a/Expressions/Expressions.csproj
+++ b/Expressions/Expressions.csproj
@@ -63,13 +63,16 @@
     <Compile Include="CompilationException.cs" />
     <Compile Include="DynamicExpression.cs" />
     <Compile Include="DynamicExpressionCache.cs" />
+    <Compile Include="ExpressionContext.cs" />
     <Compile Include="ExpressionLanguage.cs" />
     <Compile Include="Flee\FleeLexer.cs" />
     <Compile Include="Flee\FleeParser.cs" />
     <Compile Include="Flee\Generated\FleeLexer.cs" />
     <Compile Include="Flee\Generated\FleeParser.cs" />
+    <Compile Include="IExecutionContext.cs" />
+    <Compile Include="IExpressionContext.cs" />
     <Compile Include="IIdentifierResolver.cs" />
-    <Compile Include="IExpressionBinder.cs" />
+    <Compile Include="IBindingContext.cs" />
     <Compile Include="Import.cs" />
     <Compile Include="ImportMethodResolver.cs" />
     <Compile Include="ImportPropertyResolver.cs" />
@@ -79,6 +82,8 @@
     <Compile Include="OwnerPropertyResolver.cs" />
     <Compile Include="ParseResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Variable.cs" />
+    <Compile Include="VariableCollection.cs" />
     <Compile Include="VariableResolver.cs" />
   </ItemGroup>
   <ItemGroup>
