--- a/Expressions.Test/Expressions.Test.csproj
+++ b/Expressions.Test/Expressions.Test.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resolving\MethodCalls.cs" />
     <Compile Include="Resolving\ResolvedNodePrinter.cs" />
+    <Compile Include="Resolving\ResolvingTestbase.cs" />
     <Compile Include="TypeExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
