--- a/Expressions/Expressions.csproj
+++ b/Expressions/Expressions.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Ast\ExpressionType.cs" />
     <Compile Include="Ast\Constant.cs" />
     <Compile Include="Ast\IAstNode.cs" />
+    <Compile Include="Ast\IAstVisitor.cs" />
     <Compile Include="Ast\IdentifierAccess.cs" />
     <Compile Include="Ast\IdentifierCollection.cs" />
     <Compile Include="Ast\Index.cs" />
@@ -58,30 +59,17 @@
     <Compile Include="Ast\MethodCall.cs" />
     <Compile Include="Ast\TypeIdentifier.cs" />
     <Compile Include="Ast\UnaryExpression.cs" />
-    <Compile Include="BoundAst\Binder.cs" />
-    <Compile Include="BoundAst\BoundBinaryExpression.cs" />
-    <Compile Include="BoundAst\BoundCast.cs" />
-    <Compile Include="BoundAst\BoundConstant.cs" />
-    <Compile Include="BoundAst\BoundField.cs" />
-    <Compile Include="BoundAst\BoundMethod.cs" />
-    <Compile Include="BoundAst\BoundParameter.cs" />
-    <Compile Include="BoundAst\BoundUnaryExpression.cs" />
+    <Compile Include="Expressions\BinaryExpression.cs" />
+    <Compile Include="Expressions\Cast.cs" />
+    <Compile Include="Expressions\Constant.cs" />
+    <Compile Include="Expressions\FieldAccess.cs" />
+    <Compile Include="Expressions\TypeAccess.cs" />
+    <Compile Include="Expressions\IExpression.cs" />
+    <Compile Include="Expressions\Index.cs" />
+    <Compile Include="Expressions\MethodCall.cs" />
+    <Compile Include="Expressions\UnaryExpression.cs" />
+    <Compile Include="Expressions\VariableAccess.cs" />
     <Compile Include="Require.cs" />
-    <Compile Include="ResolvedAst\ConstantIdentifier.cs" />
-    <Compile Include="ResolvedAst\FieldIdentifier.cs" />
-    <Compile Include="ResolvedAst\GlobalIdentifier.cs" />
-    <Compile Include="BoundAst\IBoundAstNode.cs" />
-    <Compile Include="ResolvedAst\ImportIdentifier.cs" />
-    <Compile Include="ResolvedAst\IResolvedIdentifier.cs" />
-    <Compile Include="ResolvedAst\ITypedResolvedIdentifier.cs" />
-    <Compile Include="ResolvedAst\MethodGroupIdentifier.cs" />
-    <Compile Include="ResolvedAst\MethodIdentifier.cs" />
-    <Compile Include="ResolvedAst\NullIdentifier.cs" />
-    <Compile Include="ResolvedAst\PropertyGroupIdentifier.cs" />
-    <Compile Include="ResolvedAst\PropertyIdentifier.cs" />
-    <Compile Include="ResolvedAst\BinaryIdentifier.cs" />
-    <Compile Include="ResolvedAst\ResolvedType.cs" />
-    <Compile Include="ResolvedAst\TypeIdentifier.cs" />
     <Compile Include="BoundExpression.cs" />
     <Compile Include="BoundExpressionCache.cs" />
     <Compile Include="CompilationException.cs" />
@@ -102,18 +90,8 @@
     <Compile Include="ObjectUtil.cs" />
     <Compile Include="ParseResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ResolvedAst\IResolvedAstNode.cs" />
-    <Compile Include="ResolvedAst\ResolvedBinaryExpression.cs" />
-    <Compile Include="ResolvedAst\ResolvedCast.cs" />
-    <Compile Include="ResolvedAst\ResolvedConstant.cs" />
-    <Compile Include="ResolvedAst\ResolvedIdentifierAccess.cs" />
-    <Compile Include="ResolvedAst\ResolvedIndex.cs" />
-    <Compile Include="ResolvedAst\ResolvedMemberAccess.cs" />
-    <Compile Include="ResolvedAst\ResolvedMethodCall.cs" />
-    <Compile Include="ResolvedAst\ResolvedUnaryExpression.cs" />
-    <Compile Include="ResolvedAst\Resolver.cs" />
-    <Compile Include="ResolvedAst\TypeUtil.cs" />
-    <Compile Include="ResolvedAst\VariableIdentifier.cs" />
+    <Compile Include="Resolver.cs" />
+    <Compile Include="TypeUtil.cs" />
     <Compile Include="Variable.cs" />
     <Compile Include="VariableCollection.cs" />
   </ItemGroup>
