* Moved binding visitor out of the resolver class;
* Created a generic expression visitor.

--- a/Expressions/Expressions.csproj
+++ b/Expressions/Expressions.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Ast\BinaryExpression.cs" />
     <Compile Include="Ast\Cast.cs" />
     <Compile Include="Ast\AstNodeCollection.cs" />
+    <Compile Include="BindingResolver.cs" />
     <Compile Include="ExpressionType.cs" />
     <Compile Include="Ast\Constant.cs" />
     <Compile Include="Ast\IAstNode.cs" />
