* Fixed failing arithmetic unit tests.

--- a/Expressions/Expressions.csproj
+++ b/Expressions/Expressions.csproj
@@ -48,7 +48,7 @@
     <Compile Include="Ast\BinaryExpression.cs" />
     <Compile Include="Ast\Cast.cs" />
     <Compile Include="Ast\AstNodeCollection.cs" />
-    <Compile Include="BindingResolver.cs" />
+    <Compile Include="BindingVisitor.cs" />
     <Compile Include="ConversionVisitor.cs" />
     <Compile Include="DynamicExpressionOptions.cs" />
     <Compile Include="ExpressionType.cs" />
