--- a/Expressions.Test/Expressions.Test.csproj
+++ b/Expressions.Test/Expressions.Test.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Compilation\Fields.cs" />
     <Compile Include="Compilation\Indexing.cs" />
     <Compile Include="Compilation\MethodCalls.cs" />
+    <Compile Include="Compilation\ResultCasting.cs" />
     <Compile Include="Compilation\TestBase.cs" />
     <Compile Include="Compilation\UnaryExpressions.cs" />
     <Compile Include="ExpressionTests\BinaryExpressions.cs" />
