--- a/Expressions/Expressions.csproj
+++ b/Expressions/Expressions.csproj
@@ -48,7 +48,9 @@
     <Compile Include="Ast\BinaryExpression.cs" />
     <Compile Include="Ast\Cast.cs" />
     <Compile Include="Ast\AstNodeCollection.cs" />
+    <Compile Include="Ast\Conditional.cs" />
     <Compile Include="BindingVisitor.cs" />
+    <Compile Include="Expressions\Conditional.cs" />
     <Compile Include="ConstantParsingVisitor.cs" />
     <Compile Include="ConversionVisitor.cs" />
     <Compile Include="BoundExpressionOptions.cs" />
