--- a/Expressions.Test/Expressions.Test.csproj
+++ b/Expressions.Test/Expressions.Test.csproj
@@ -77,9 +77,8 @@
     <Compile Include="FleeLanguage\BulkTests.cs" />
     <Compile Include="FleeLanguage\ExpressionOwners.cs" />
     <Compile Include="FleeLanguage\ExpressionTests.cs" />
-    <Compile Include="MethodCalls.cs" />
+    <Compile Include="Parsing\Parsing.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TypeExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Expressions\Expressions.csproj">
