--- a/Expressions.Test/Expressions.Test.csproj
+++ b/Expressions.Test/Expressions.Test.csproj
@@ -43,6 +43,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Libraries\Antlr\Antlr3.Runtime.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="nunit.framework">
       <HintPath>..\Libraries\NUnit\nunit.framework.dll</HintPath>
     </Reference>
@@ -51,6 +52,33 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="VisualBasicLanguage\BulkTests\BulkTests.cs" />
+    <Compile Include="VisualBasicLanguage\BulkTests\ExpressionOwners.cs" />
+    <Compile Include="VisualBasicLanguage\BulkTests\ExpressionTests.cs" />
+    <Compile Include="VisualBasicLanguage\Compilation\BinaryExpressions.cs" />
+    <Compile Include="VisualBasicLanguage\Compilation\Caching.cs" />
+    <Compile Include="VisualBasicLanguage\Compilation\Casting.cs" />
+    <Compile Include="VisualBasicLanguage\Compilation\EmitIssues.cs" />
+    <Compile Include="VisualBasicLanguage\Compilation\Fields.cs" />
+    <Compile Include="VisualBasicLanguage\Compilation\Imports.cs" />
+    <Compile Include="VisualBasicLanguage\Compilation\Indexing.cs" />
+    <Compile Include="VisualBasicLanguage\Compilation\MethodCalls.cs" />
+    <Compile Include="VisualBasicLanguage\Compilation\ResultCasting.cs" />
+    <Compile Include="VisualBasicLanguage\Compilation\TestBase.cs" />
+    <Compile Include="VisualBasicLanguage\Compilation\UnaryExpressions.cs" />
+    <Compile Include="VisualBasicLanguage\ExpressionTests\BinaryExpressions.cs" />
+    <Compile Include="VisualBasicLanguage\ExpressionTests\Casting.cs" />
+    <Compile Include="VisualBasicLanguage\ExpressionTests\Constants.cs" />
+    <Compile Include="VisualBasicLanguage\ExpressionTests\Conversions.cs" />
+    <Compile Include="VisualBasicLanguage\ExpressionTests\ExpressionPrinter.cs" />
+    <Compile Include="VisualBasicLanguage\ExpressionTests\GlobalAccesses.cs" />
+    <Compile Include="VisualBasicLanguage\ExpressionTests\Indexing.cs" />
+    <Compile Include="VisualBasicLanguage\ExpressionTests\MethodCalls.cs" />
+    <Compile Include="VisualBasicLanguage\ExpressionTests\SpecialConstructs.cs" />
+    <Compile Include="VisualBasicLanguage\ExpressionTests\TestBase.cs" />
+    <Compile Include="VisualBasicLanguage\ExpressionTests\UnaryExpressions.cs" />
+    <Compile Include="VisualBasicLanguage\ExpressionTests\VoidMethods.cs" />
+    <Compile Include="VisualBasicLanguage\Parsing\Parsing.cs" />
     <Compile Include="CsharpLanguage\BulkTests\BulkTests.cs" />
     <Compile Include="CsharpLanguage\BulkTests\ExpressionOwners.cs" />
     <Compile Include="CsharpLanguage\BulkTests\ExpressionTests.cs" />
@@ -163,6 +191,36 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="CsharpLanguage\BulkTests\TestScripts\ValidExpressions.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="VisualBasicLanguage\BulkTests\TestScripts\CheckedTests.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="VisualBasicLanguage\BulkTests\TestScripts\IndividualTests.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="VisualBasicLanguage\BulkTests\TestScripts\InvalidExpressions.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="VisualBasicLanguage\BulkTests\TestScripts\LongBranchLogicalTest.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="VisualBasicLanguage\BulkTests\TestScripts\OnDemandMethods.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="VisualBasicLanguage\BulkTests\TestScripts\SimpleCalcEngineTests.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="VisualBasicLanguage\BulkTests\TestScripts\SpecialConstructs.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="VisualBasicLanguage\BulkTests\TestScripts\TypeDescriptor.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="VisualBasicLanguage\BulkTests\TestScripts\ValidCasts.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="VisualBasicLanguage\BulkTests\TestScripts\ValidExpressions.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
